packages/cashc/test/compiler/ParseError/chained_increment.cash
contract ChainedIncrement() {
    function spend() {
        int x = 1;
        x++++;
    }
}
